log
Sun 25 Sep 2022 09:57:57 PM UTC: 
 tests:  1|8
total_score: 0/70
ec6a8ce
Sun 25 Sep 2022 09:59:57 PM UTC: 
 treemap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
bd28f41
Sun 25 Sep 2022 10:04:14 PM UTC: 
 treemap.c | 50 ++++++++++++++++++++++++++++++++++++++++++++++++++
 1 file changed, 50 insertions(+)
In file included from test.c:4:
treemap.c:104:12: error: redefinition of ‘minimum’
  104 | TreeNode * minimum(TreeNode * x){
      |            ^~~~~~~
treemap.c:83:12: note: previous definition of ‘minimum’ was here
   83 | TreeNode * minimum(TreeNode * x){
      |            ^~~~~~~
treemap.c:110:6: error: redefinition of ‘removeNode’
  110 | void removeNode(TreeMap * tree, TreeNode* node) {
      |      ^~~~~~~~~~
treemap.c:91:6: note: previous definition of ‘removeNode’ was here
   91 | void removeNode(TreeMap * tree, TreeNode* node) {
      |      ^~~~~~~~~~
treemap.c:114:6: error: redefinition of ‘eraseTreeMap’
  114 | void eraseTreeMap(TreeMap * tree, void* key){
      |      ^~~~~~~~~~~~
treemap.c:95:6: note: previous definition of ‘eraseTreeMap’ was here
   95 | void eraseTreeMap(TreeMap * tree, void* key){
      |      ^~~~~~~~~~~~
Compilation failed
8f1d802
Sun 25 Sep 2022 10:06:38 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c:110:6: error: redefinition of ‘removeNode’
  110 | void removeNode(TreeMap * tree, TreeNode* node) {
      |      ^~~~~~~~~~
treemap.c:91:6: note: previous definition of ‘removeNode’ was here
   91 | void removeNode(TreeMap * tree, TreeNode* node) {
      |      ^~~~~~~~~~
treemap.c:114:6: error: redefinition of ‘eraseTreeMap’
  114 | void eraseTreeMap(TreeMap * tree, void* key){
      |      ^~~~~~~~~~~~
treemap.c:95:6: note: previous definition of ‘eraseTreeMap’ was here
   95 | void eraseTreeMap(TreeMap * tree, void* key){
      |      ^~~~~~~~~~~~
Compilation failed
7bae872
Sun 25 Sep 2022 10:07:25 PM UTC: 
 treemap.c | 52 +---------------------------------------------------
 1 file changed, 1 insertion(+), 51 deletions(-)
 tests:  4|7
total_score: 5/70
3dcf77c
Sun 25 Sep 2022 10:09:37 PM UTC: 
 treemap.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
 tests:  11|6
total_score: 15/70
4b05f33
Sun 25 Sep 2022 10:12:09 PM UTC: 
 treemap.c | 52 ++++++++++++++++++++++++++++++++++++++++++++++++++++
 1 file changed, 52 insertions(+)
In file included from test.c:4:
treemap.c:106:12: error: redefinition of ‘minimum’
  106 | TreeNode * minimum(TreeNode * x){
      |            ^~~~~~~
treemap.c:85:12: note: previous definition of ‘minimum’ was here
   85 | TreeNode * minimum(TreeNode * x){
      |            ^~~~~~~
treemap.c:112:6: error: redefinition of ‘removeNode’
  112 | void removeNode(TreeMap * tree, TreeNode* node) {
      |      ^~~~~~~~~~
treemap.c:93:6: note: previous definition of ‘removeNode’ was here
   93 | void removeNode(TreeMap * tree, TreeNode* node) {
      |      ^~~~~~~~~~
treemap.c:116:6: error: redefinition of ‘eraseTreeMap’
  116 | void eraseTreeMap(TreeMap * tree, void* key){
      |      ^~~~~~~~~~~~
treemap.c:97:6: note: previous definition of ‘eraseTreeMap’ was here
   97 | void eraseTreeMap(TreeMap * tree, void* key){
      |      ^~~~~~~~~~~~
Compilation failed
37b04e7
Sun 25 Sep 2022 10:13:14 PM UTC: 
 treemap.c | 21 ---------------------
 1 file changed, 21 deletions(-)
 tests:  13|5
total_score: 25/70
5d28b62
